<resources>
    <string name="update_message">Changes in v1.120:\n\t* Fix TMO, EsNineManga, Taadd and MangaTown.\n\t* Fix on GUI</string>
    <string name="_12hours">12 Hours</string>
    <string name="_1day">1 day</string>
    <string name="_2day">2 days</string>
    <string name="_6hours">6 Hours</string>
    <string name="_7day">7 days</string>
    <string name="_update_at_start_up">Update at start up</string>
    <string name="action_ajustar_a">Fit to</string>
    <string name="action_settings">Settings</string>
    <string name="agregadodescarga">Chapter added to downloads</string>
    <string name="agregado">Manga added</string>
    <string name="adding_to_db">Adding to database</string>
    <string name="ajuste_alto">Fit to height</string>
    <string name="ajuste_ancho">Fit to width</string>
    <string name="ajuste_imagen">Image fit by default</string>
    <string name="apachelic">Apache License</string>
    <string name="app_name" translatable="false">Mi Manga Nu</string>
    <string name="autor">Author</string>
    <string name="borrado_imagenes">Images deleted</string>
    <string name="borrarcap">Remove chapter</string>
    <string name="borrar">Delete</string>
    <string name="borrar_imagenes">Delete images to free space</string>
    <string name="searching_for_updates">Searching for updates </string>
    <string name="buscarupdates">Search for updates</string>
    <string name="busquedanores">The search returned no results</string>
    <string name="cantidad_descargas_subtitle">Amount of Images downloaded concurrently: %s</string>
    <string name="cantidad_descargas_title">Download threads</string>
    <string name="cantidad_reintentos_subtitle">Retries to get an image after encountering an error: %s</string>
    <string name="cantidad_reintentos_title">Maximum retries per image</string>
    <string name="color_primario">Primary Color</string>
    <string name="color_secundario">Secondary Color</string>
    <string name="configuraciones">Settings</string>
    <string name="datosde">Details</string>
    <string name="demaciados_errores">Too many errors (Download suspended) \n This may be caused by: \n *  A connection error \n *  An error on the server side \n *  A bad upload, etc. \nTry again later</string>
    <string name="descarga_no_leidos">Download unread</string>
    <string name="descargarestantes">Download remaining</string>
    <string name="descargas">Downloads</string>
    <string name="direcctorio_subtitle">For downloads (You need to move the content to the new directory manually, restart the app and sometimes the device)</string>
    <string name="directorio_title">Select directory</string>
    <string name="download_image_again">Download image again</string>
    <string name="en_progreso">Ongoing</string>
    <string name="encola">(Queued)</string>
    <string name="descargado">(Downloaded)</string>
    <string name="descargando">(Downloading)</string>
    <string name="error">(Error)</string>
    <string name="paused">(Paused)</string>
    <string name="esconder_de_galeria_subtitle">Hide downloaded images from the gallery. A device restart might be needed for a change to take effect.</string>
    <string name="escondergaleria">Hide from gallery</string>
    <string name="hide_read">Hide already read</string>
    <string name="estado">Status</string>
    <string name="filtrar">Filter</string>
    <string name="finalizado">Finished</string>
    <string name="folder_changed">Folder changed.</string>
    <string name="iniciando">Loading number of pages</string>
    <string name="keep_on">Keep screen on</string>
    <string name="l2r">Left to Right</string>
    <string name="licencia">Licenses</string>
    <string name="listaen">Mangas from</string>
    <string name="lock_on_landscape">Screen locked on landscape mode</string>
    <string name="lock_on_portrait">Screen locked on portrait mode</string>
    <string name="macartodoleido">Mark all as read</string>
    <string name="macartodonoleido">Mark all as unread</string>
    <string name="marcarleido">Mark selected as read</string>
    <string name="markSelectedUnread">Mark selected as unread</string>
    <string name="max_texture_subtitle">Size of texture, which will be used (0 to deactivate hardware acceleration)\n%s</string>
    <string name="max_texture_title">Maximum texture size</string>
    <string name="mejor_ajuste">Best fit</string>
    <string name="mitlic">MIT License</string>
    <string name="nobuscarupdate">Don\'t search for updates</string>
    <string name="nodisponible">N/A</string>
    <string name="no_scale">Original size</string>
    <string name="notification_sound_subtitle">When new chapters are found</string>
    <string name="notification_sound_title">Play sound</string>
    <string name="no_update">Don\'t check for updates</string>
    <string name="opciones_descarga">Download settings</string>
    <string name="opciones_lec">Reader settings</string>
    <string name="opciones_mm">Manga settings</string>
    <string name="quitar_descarga">Can\'t remove active download</string>
    <string name="quitar_seleccion">Select none</string>
    <string name="r2l">Right to Left</string>
    <string name="resetcap">Reset chapter</string>
    <string name="rotation_no_locked">Screen rotation free</string>
    <string name="rotation">Rotation</string>
    <string name="see_later">Read Later</string>
    <string name="seleccionar_todo">Select all</string>
    <string name="sentido">Direction</string>
    <string name="sentido_lectura">Read direction</string>
    <string name="server">Server</string>
    <string name="sinopsis">Synopsis</string>
    <string name="State_New">New</string>
    <string name="stay_awake_off">Stay awake off</string>
    <string name="stay_awake_on">Stay awake on</string>
    <string name="unwritable_folder">Unwritable folder.</string>
    <string name="update_settings_title">Update Settings</string>
    <string name="update_title">Update interval</string>
    <string name="vercomolista">View as List</string>
    <string name="vertical">Vertical</string>
    <string name="ui_settings">UI Settings</string>
    <string name="cantidad_errores_subtitle">Tolerated number of errors per chapter: %s</string>
    <string name="download_selection">Download selection</string>
    <string name="cantidad_errores_title">Error toleration per chapter</string>
    <string name="license_sub">Tap to see licenses and thanks</string>
    <string name="color_primario_sub">Main coloring, like for titlebar etc.</string>
    <string name="color_secundario_sub">Secondary coloring, for more variety</string>
    <string name="about">About</string>
    <string name="scroll_speed">Scroll speed</string>
    <string name="theme_title">Use dark theme</string>
    <string name="sort">Sort</string>
    <string name="sort_recent">Recently read</string>
    <string name="sort_title">Title</string>
    <string name="sort_author">Author</string>
    <string name="sort_recent_desc">Recently read (oldest)</string>
    <string name="sort_title_desc">Title (z-a)</string>
    <string name="sort_author_desc">Author (z&#8211;a)</string>
    <string name="more_options">More options</string>
    <string name="color_reader">Reader Color</string>
    <string name="color_reader_sub">The color in the reader mode</string>
    <string name="read_next">Do you want to open the next chapter?</string>
    <string name="last_chapter">Currently this is the last chapter.</string>
    <string name="genre">Genre</string>
    <string name="connection_settings">Connection Settings </string>
    <string name="connection_timeout_title">Connection timeout</string>
    <string name="connection_timeout_summary">%s seconds</string>
    <string name="update_thread_background_title">Update threads (Background)</string>
    <string name="update_threads_background_summary">Amount of update threads for background: %s</string>
    <string name="update_thread_manual_title">Update threads (Manual)</string>
    <string name="update_threads_manual_summary">Amount of update threads for manual search: %s</string>
    <string name="download_remain_confirmation">Do you want to download all remaining chapters?</string>
    <string name="download_unread_confirmation">Do you want to download all unread chapters?</string>
    <string name="mar_and_di">Mark as read and delete images</string>
    <string name="select_begin">Select from the beginning</string>
    <string name="select_end">Select until the end</string>
    <string name="remove_downloaded">Remove downloaded</string>
    <string name="remove_all">Remove all</string>
    <string name="retry_errors">Retry errors</string>
    <string name="pause_all_downloads">Pause downloads</string>
    <string name="resume_downloads">Resume Downloads</string>
    <string name="continuous_reader">Continuous reader</string>
    <string name="paged_reader">Paged reader</string>
    <string name="error_downloading_image">Error unable to download image</string>
    <string name="used_space">Storage size used by mangas</string>
    <string name="delete_on_chapter_change">Delete chapter images?</string>
    <string name="mgs_update_found">New chapters were found (%s)</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="sort_number">Sort by chapter number (9&#8211;0)</string>
    <string name="sort_number_asc">Sort by chapter number </string>
    <string name="delete_confirm">Do you want to remove these chapters?</string>
    <string name="storage_permission_denied">Storage Permission is required for MiMangaNu to work correctly</string>
    <string name="no_new_updates_found">No new chapters found :(</string>
    <string name="sort_as_added_to_db_asc">As added to db (asc)</string>
    <string name="sort_as_added_to_db_desc">As added to db (desc)</string>
    <string name="error_while_adding_chapter_or_manga_to_db">Error occurred while trying to add \"%s\" to database</string>
    <string name="error_while_updating_chapter_or_manga_in_db">Error occurred while trying to update \"%s\" in database</string>
    <string name="ram_usage">Memory usage</string>
    <string name="seamless_chapter_transitions_title">Seamless transitions</string>
    <string name="seamless_chapter_transitions_paged_reader_subtitle">Press left or right on the first or last page of a chapter to load the previous or next chapter.</string>
    <string name="seamless_chapter_transitions_continuous_reader_subtitle">Swipe left or right (up or down for Vertical reading direction) on the first or last page of a chapter to load the previous or next chapter.</string>
    <string name="download_next_chapter_automatically_title">Download next chapter</string>
    <string name="download_next_chapter_automatically_subtitle">While reading next chapter will be downloaded automatically</string>
    <string name="deleted">Deleted: %s</string>
    <string name="deleted_no_var">Deleted</string>
    <string name="clear_cache_title">Clear cache</string>
    <string name="clear_cache_subtitle">Tap here to clear the cache. All cover images have to be redownloaded again.</string>
    <string name="misc_settings">Misc Settings</string>
    <string name="seamless_chapter_transitions_delete_read_title">Delete after reading</string>
    <string name="seamless_chapter_transitions_delete_read_subtitle">This deletes the current chapter when transitioning to the next chapter</string>
    <string name="dir_already_on_db">Directory already added</string>
    <string name="already_on_db">Manga already added</string>
    <string name="edit_server_list">Edit server list</string>
    <string name="no_wifi_connection">No WiFi connection</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="use_only_wifi_title">Use only WiFi</string>
    <string name="use_only_wifi_subtitle">To avoid data plan usage</string>
</resources>