<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:key="first_preferencescreen">

    <PreferenceCategory android:title="@string/opciones_mm">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="mostrar_en_galeria"
            android:summary="@string/esconder_de_galeria_subtitle"
            android:title="@string/escondergaleria"></CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/opciones_caps">
        <ListPreference
            android:dialogTitle="@string/orden_de_capitulos"
            android:entries="@array/ordenes_array"
            android:entryValues="@array/ordenes_valores"
            android:key="ordendecapitulos"
            android:summary="@string/orden_de_capitulos_subtitle"
            android:title="@string/orden_de_capitulos" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/opciones_lec">
        <ListPreference
            android:dialogTitle="@string/sentido_lectura"
            android:entries="@array/sentido_lectura"
            android:entryValues="@array/sentido_lectura_val"
            android:key="direcciondelectura"
            android:summary="@string/sentido_lectura_subtitle"
            android:title="@string/sentido_lectura" />
        <ListPreference
            android:dialogTitle="@string/ajuste_imagen"
            android:entries="@array/ajustar_a"
            android:entryValues="@array/ajustar_valores"
            android:key="ajustar_a"
            android:summary="@string/ajuste_imagen_subtitle"
            android:title="@string/ajuste_imagen" />
        <ListPreference
            android:entries="@array/max_texture_support_acceleration"
            android:entryValues="@array/max_texture_support_acceleration"
            android:key="max_texture"
            android:summary="@string/max_texture_subtitle"
            android:title="@string/max_texture_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/opciones_descarga">
        <ar.rulosoft.mimanganu.componentes.PreferencesListDir
            android:key="directorio"
            android:summary="@string/direcctorio_subtitle"
            android:title="@string/directorio_title" />

        <ListPreference
            android:dialogTitle="@string/cantidad_descargas_title"
            android:entries="@array/download_threads"
            android:entryValues="@array/download_threads"
            android:key="download_threads"
            android:summary="@string/cantidad_descargas_subtitle"
            android:title="@string/cantidad_descargas_title" />
        <ListPreference
            android:dialogTitle="@string/cantidad_errores_title"
            android:entries="@array/uno_a_nueve"
            android:entryValues="@array/uno_a_nueve"
            android:key="error_tolerancia"
            android:summary="@string/cantidad_errores_subtitle"
            android:title="@string/cantidad_errores_title" />
        <ListPreference
            android:dialogTitle="@string/cantidad_reintentos_title"
            android:entries="@array/uno_a_nueve"
            android:entryValues="@array/uno_a_nueve"
            android:key="reintentos"
            android:summary="@string/cantidad_reintentos_subtitle"
            android:title="@string/cantidad_reintentos_title" />
    </PreferenceCategory>

</PreferenceScreen>