<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.rulosoft.mimanganu.ActivityCapitulos">
    <item
        android:id="@+id/action_reader"
        android:icon="@drawable/ic_action_paged"
        android:title="@string/paged_reader"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sentido"
        android:icon="@drawable/ic_action_clasico"
        android:orderInCategory="100"
        android:title="@string/sentido"
        app:showAsAction="always" />

    <item
        android:id="@+id/descargas"
        android:icon="@drawable/ic_action_downloads"
        android:title="@string/descargas"
        android:orderInCategory="100"

        app:showAsAction="always" />
    <item
        android:id="@+id/sort_chapters"
        android:orderInCategory="100"

        android:icon="@drawable/ic_action_sort"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_number"
                    android:title="@string/sort_number" />
                <item
                    android:id="@+id/sort_number_asc"
                    android:title="@string/sort_number_asc" />
                <item
                    android:id="@+id/sort_title"
                    android:title="@string/sort_title" />
                <item
                    android:id="@+id/sort_title_asc"
                    android:title="@string/sort_title_desc" />
                <item
                    android:id="@+id/sort_added_db"
                    android:title="@string/sort_added_db" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/submenu"
        android:icon="@drawable/ic_action_core_overflow"
        android:orderInCategory="100"
        android:title="@+id/more_options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_download_reamains"
                android:title="@string/descargarestantes" />
            <item
                android:id="@+id/action_descargar_no_leidos"
                android:title="@string/descarga_no_leidos" />
            <item
                android:id="@+id/action_uncheck_as_read"
                android:title="@string/macartodonoleido" />
            <item
                android:id="@+id/action_check_as_read"
                android:title="@string/macartodoleido" />
        </menu>
    </item>
</menu>
