<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.rulosoft.mimanganu.ActivityCapitulos">
    <item
        android:id="@+id/action_sentido"
        android:icon="@drawable/ic_action_clasico"
        android:orderInCategory="100"
        android:title="@string/sentido"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/descargas"
        android:icon="@drawable/ic_action_downloads"
        android:title="@string/descargas"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_action_core_overflow"
        android:orderInCategory="100"
        android:title="@+id/more_options"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_descargar_restantes"
                android:title="@string/descargarestantes" />
            <item
                android:id="@+id/action_descargar_no_leidos"
                android:title="@string/descarga_no_leidos" />
            <item
                android:id="@+id/action_marcar_todo_no_leido"
                android:title="@string/macartodonoleido" />
            <item
                android:id="@+id/action_marcar_todo_leido"
                android:title="@string/macartodoleido" />
        </menu>
    </item>
</menu>