<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ar.rulosoft.mimanganu.MisMangas">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_action_search"
        android:title="@string/filtrar"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/ver_como_lista"
        android:icon="@drawable/ic_view_as_list"
        android:title="@string/vercomolista"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/sort"
        app:showAsAction="always"/>
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_action_content_filter"
        android:title="@string/filtrar"
        app:showAsAction="always"/>
</menu>