<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/option_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reader_type"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_paged"
                android:text="@string/paged_reader"
                android:textSize="10sp" />

            <Button
                android:id="@+id/reader_direction"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_inverso"
                android:text="@string/remove_all"
                android:textSize="10sp" />

            <Button
                android:id="@+id/reader_ajust"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_ajustar_ancho"
                android:text="@string/ajuste_ancho"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/reader_stay_awake"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_mantain_screen_off"
                android:minLines="2"
                android:text="@string/keep_on"
                android:textSize="10sp" />

            <Button
                android:id="@+id/reader_rotate"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_screen_portrait"
                android:minLines="2"
                android:text="@string/lock_on_portrait"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</io.codetail.widget.RevealFrameLayout>